--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
-body {
-    background: blue;
-  }
-  
+*{
+  margin: 0;
+  padding: 0;
+  font-family:sans-serif ;
+}
+.hero{
+  position: relative;
+  width: 100;
+  height: 100vh;
+  background: black;
+}
