--- a/style.css
+++ b/style.css
@@ -1,11 +1,33 @@
+
 *{
   margin: 0;
   padding: 0;
   font-family:sans-serif ;
+  box-sizing: border-box;
+  background-color: black;
 }
-.hero{
-  position: relative;
-  width: 100;
-  height: 100vh;
-  background: black;
+.navbar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:black;
+  position: sticky;
+  top: 0;
+}
+.navbar ul{
+  display: flex;
+  list-style: none;
+  margin: 20px 0px;
+}
+.navbar ul li{
+  font-weight: bold;
+}
+.navbar ul li a{
+  text-decoration: none;
+  color: yellow;
+  padding: 8px 25px;
+}
+.navbar ul li a:hover{
+  background-color:black ;
+  
 }
