--- a/style.css
+++ b/style.css
@@ -14,8 +14,9 @@ nav{
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
   z-index: 1;
+  position: sticky;
+  top: 0;
 }
 .navbar{
   text-align: right;
@@ -125,4 +126,51 @@ color: #fff;
 .box p{
   color: #fff;
   font-size: 20px;
+}
+/*Contact section*/
+#Contact{
+  display: flex;
+  flex-direction: column;
+  background-color: #000;
+  color: #fff;
+}
+#Contact h1{
+  margin: 50px;
+}
+.form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.input{
+  padding: 15px 20px;
+  margin: 15px;
+  width: 40%;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+}
+#message{
+  margin: 15px;
+  padding: 10px;
+  border-radius: 20px;
+}
+#submit{
+  padding: 15px 20px;
+  margin: 30px;
+  width: 15%;
+  border-radius: 20px;
+  background-color: darkslategrey;;
+  color: whitesmoke;
+  border: none;
+  outline:none;
+  font-size: larger;
+  font-weight: bolder;
+  
+}
+#submit:hover{
+  background-color: lightblue;
+  color: #fff;
+  cursor: pointer;
 }
