--- a/style.css
+++ b/style.css
@@ -3,13 +3,7 @@
   padding: 0;
   font-family: 'poppins', sans-serif;
 }
-.header{
-  min-height: 100vh;
-  width: 100%;
-  background: #000;
-  color: #fff;
-  position: relative;
-}
+
 nav{
   display: flex;
   justify-content: center;
@@ -17,6 +11,8 @@ nav{
   z-index: 1;
   position: sticky;
   top: 0;
+  background-color: black;
+  opacity: .8;
 }
 .navbar{
   text-align: right;
@@ -51,6 +47,7 @@ nav{
   justify-content: space-between;
   position: relative;
   margin-top: -1%;
+  background-color: #000;
 }
 .lef-col{
   flex-basis: 40%;
@@ -61,7 +58,7 @@ nav{
 .right-col{
   font-style: 60px;
   font-weight: 600;
-}
+} 
 .right-col{
   color: gray;
   margin: 20px 0 70px;
